third_party/rust/paste/tests/ui/missing-paren-on-env.stderr
error: expected `(`
 --> $DIR/missing-paren-on-env.rs:2:15
  |
2 |     fn [<env! huh>]() {}
  |               ^^^
