third_party/rust/paste/tests/ui/missing-paren-on-env.rs
paste::item! {
    fn [<env! huh>]() {}
}

fn main() {}
